fixing touch issue on mobile Safari. Apple sick bastard.

--- a/static/main.css
+++ b/static/main.css
@@ -3,6 +3,7 @@
 html,
 body {
     scroll-behavior: smooth;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 body {
